@@ -1,3 +1,8 @@
+2010-07-27  Jackson Harper  <jackson@ximian.com>
+
+	* xaml.cpp: Now that the context is never null we need to make
+	sure we return the correct top pointer.
+
 2010-07-27  David Reveman  <davidr@novell.com>
 
 	* src/grid.cpp:
